--- a/SalamatKoodak/SalamatKoodak.csproj
+++ b/SalamatKoodak/SalamatKoodak.csproj
@@ -8336,6 +8336,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Personels\Index.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Users\ChangePassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
